Refactor temporal and date-time range handling: replace `DateTimeRange` and `TimeRange` with `LocalDateTimeRange` and `LocalTimeRange`, and simplify event-related domain entities and tests.